extracted and consolidated yt video comment documents in data through script in dataPrep

--- a/dataPrep.ipynb
+++ b/dataPrep.ipynb
@@ -20,6 +20,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "72365b13",
+   "metadata": {},
+   "source": [
+    "## Reddit"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "12602719",
@@ -248,9 +256,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3af50508",
+   "metadata": {},
+   "source": [
+    "## YouTube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "47e20d47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ok-aNnc0Dko.csv',\n",
+       " '0ZF35dPoBeE.csv',\n",
+       " 'grUJ97ajA4Y.csv',\n",
+       " 'iFAWLhcBNaA.csv',\n",
+       " 'ozF85QOz6Dg.csv']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "commentsFiles = [f for f in os.listdir('ytVideoComments') if f.endswith('.csv')]\n",
+    "commentsFiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8b5674c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote 100 comments to data/video-ok-aNnc0Dko.txt\n",
+      "Wrote 93 comments to data/video-0ZF35dPoBeE.txt\n",
+      "Wrote 38 comments to data/video-grUJ97ajA4Y.txt\n",
+      "Wrote 36 comments to data/video-iFAWLhcBNaA.txt\n",
+      "Wrote 21 comments to data/video-ozF85QOz6Dg.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "for videoFile in commentsFiles:\n",
+    "    videoID = videoFile.split('.')[0]\n",
+    "    \n",
+    "    fileContent = \"Video ID: {}\\n\\n\".format(videoID)\n",
+    "    fileCommentsData = pd.read_csv('ytVideoComments/{}'.format(videoFile))\n",
+    "    fileCommentsData.text = fileCommentsData.text.astype(str)\n",
+    "    \n",
+    "    fileContent += fileCommentsData.text.str.cat(sep='\\n')\n",
+    "    \n",
+    "    with open('data/video-{}.txt'.format(videoID), 'w') as f:\n",
+    "        f.write(fileContent)\n",
+    "        \n",
+    "        print(\"Wrote {} comments to data/video-{}.txt\".format(len(fileCommentsData), videoID))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47e20d47",
+   "id": "0b115ee8",
    "metadata": {},
    "outputs": [],
    "source": []
