formatted scraped article content into consolidated text documents under data

--- a/dataPrep.ipynb
+++ b/dataPrep.ipynb
@@ -324,9 +324,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dfd3d94b",
+   "metadata": {},
+   "source": [
+    "## Articles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "0b115ee8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['GuardianArticle.json', 'NPRArticle.json', 'Mixmag.json', 'TechRadar.json']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "articleFiles = [f for f in os.listdir('articles') if f.endswith('.json')]\n",
+    "articleFiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "83160db6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote article GuardianArticle.json to data/GuardianArticle.txt\n",
+      "Wrote article NPRArticle.json to data/NPRArticle.txt\n",
+      "Wrote article Mixmag.json to data/Mixmag.txt\n",
+      "Wrote article TechRadar.json to data/TechRadar.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "for articleFile in articleFiles:\n",
+    "    with open('articles/{}'.format(articleFile), 'r') as f:\n",
+    "        articleData = json.load(f)\n",
+    "    \n",
+    "    fileContent = \"Title: {}\\n\\n\".format(articleData.get('title', 'Title Unavailable'))\n",
+    "    \n",
+    "    content = articleData.get('content', 'Content Unavailable')\n",
+    "    content = content.replace('. ', '.\\n').replace('!', '!\\n').replace('?', '?\\n')\n",
+    "    \n",
+    "    fileContent += \"Content:\\n{}\".format(content)\n",
+    "    \n",
+    "    with open('data/{}.txt'.format(articleFile.split('.')[0]), 'w') as f:\n",
+    "        f.write(fileContent)\n",
+    "        \n",
+    "        print(\"Wrote article {} to data/{}.txt\".format(articleFile, articleFile.split('.')[0]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b115ee8",
+   "id": "746d8712",
    "metadata": {},
    "outputs": [],
    "source": []
